trunk/Archive2/e3/fee72a1b5d6181/output
main.cpp: In function 'constexpr std::pair<double, double> to_pair_compile_check_ce(std::initializer_list<double>)':
main.cpp:25:1: error: expression '((init.std::initializer_list<_E>::size<double>() == 2ul) ? std::pair<double, double>((* init.std::initializer_list<_E>::begin<double>()), (* std::next<const double*>(init.std::initializer_list<_E>::begin<double>(), 1l))) : <throw-expression>)' is not a constant-expression
 }
 ^
